--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ h1 {
 }
 header p {
     margin-bottom: 24px;
+    font-size: 21px;
 }
 .image-grid {
     display: grid;
@@ -32,7 +33,7 @@ header p {
     text-align: center;
 }
 .image-title {
-    margin-bottom: 8px;
+    margin-bottom: 25px;
 }
 img {
     display: block;
